--- a/L10n/www/index.html
+++ b/L10n/www/index.html
@@ -313,9 +313,9 @@ Entretanto, clique com o botão direito e veja o código fonte desta págna...
     <p>
     然而，右鍵單擊並查看此頁面的源代碼...
     <p>這不是Javascript代碼！相反地，您會發現Python代碼在“type=text/python”的腳本中。
-    <p>Brython旨在替代Javascript作為Web的腳本語言。因此，它是Python 3的實現（您可以經由Web<a href="console.html" id="c_zh-hant">控制台</a>將其用於測試驅動)，適用HTML5環境，也就是說具有DOM物件和事件的介面。
-    <p><a href="speed_results.html">執行速度</a>對於大多數操作而言類似於CPython。
-    <p>在<a href="gallery/gallery_en.html">Gallery</a>中突顯了一些可能性，從創建簡單的文檔元素到拖放以及3D導航。在 <a href="https://github.com/brython-dev/brython/wiki/Brython%20in%20the%20wild">wiki</a>中列出了一些使用Brython的應用程序。
+    <p>Brython旨在替代Javascript作為Web的腳本語言。因此，它是Python 3的實現（您可以經由Web<a href="https://www.brython.info/console.html" id="c_zh-hant">控制台</a>將其用於測試驅動)，適用HTML5環境，也就是說具有DOM物件和事件的介面。
+    <p><a href="https://www.brython.info/speed_results.html">執行速度</a>對於大多數操作而言類似於CPython。
+    <p>在<a href="https://www.brython.info/gallery/gallery_en.html">Gallery</a>中突顯了一些可能性，從創建簡單的文檔元素到拖放以及3D導航。在 <a href="https://github.com/brython-dev/brython/wiki/Brython%20in%20the%20wild">wiki</a>中列出了一些使用Brython的應用程序。
     <p>您還可以查看在各種會議中進行的<a href="https://github.com/brython-dev/brython/wiki/Brython-videos-and-talks">簡報</a>。</td>
     
     <td style="padding-left:5%;">
